example/lib/src/arbs/errors/app_zu.arb
{
  "@@locale": "zu",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "Kwenzekile iphutha",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Kwenzekile iphutha elingalindelekile",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Umbiko wephutha uthunyelwe ngempumelelo.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}